@@ -32,16 +32,17 @@
   </developers>
   <properties>
     <mvn.javase.version>8</mvn.javase.version>
-    <mvn.spring.version>4.3.8.RELEASE</mvn.spring.version>
+    <mvn.spring.version>5.3.1</mvn.spring.version>
     <mvn.cxf.version>3.1.11</mvn.cxf.version>
-    <mvn.querydsl.version>4.1.4</mvn.querydsl.version>
-    <mvn.springdatajpa.version>1.11.3.RELEASE</mvn.springdatajpa.version>
+    <mvn.querydsl.version>4.4.0</mvn.querydsl.version>
+    <mvn.springdatajpa.version>2.4.1</mvn.springdatajpa.version>
     <mvn.eclipse.version>3.8.2</mvn.eclipse.version>
-    <mvn.hibernate.version>5.4.0.Final</mvn.hibernate.version>
+    <mvn.hibernate.version>5.4.24.Final</mvn.hibernate.version>
     <mvn.hazelcast.version>3.8.1</mvn.hazelcast.version>
-    <mvn.slf4j.version>1.7.21</mvn.slf4j.version>
-    <mvn.log4j.version>2.1</mvn.log4j.version>
-    <mvn.test.options>-Xmx2048m -Xms128m -XX:MaxPermSize=512m</mvn.test.options>
+    <mvn.slf4j.version>1.7.30</mvn.slf4j.version>
+    <mvn.log4j.version>2.13.3</mvn.log4j.version> <!-- upgrading to 2.14.0 causes a strange error in SessionManagerTest -->
+    <mvn.activemq.version>5.9.0</mvn.activemq.version> <!-- upgrading triggers changes to ActiveMQ ObjectName packages -->
+    <mvn.test.options>-Xmx2048</mvn.test.options>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss.SSS Z</maven.build.timestamp.format>
   </properties>
   <dependencyManagement>
@@ -191,7 +192,7 @@
       <dependency>
         <groupId>org.flywaydb</groupId>
         <artifactId>flyway-core</artifactId>
-        <version>6.5.3</version>
+        <version>7.2.1</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
@@ -349,7 +350,7 @@
       <dependency>
         <groupId>org.tensorflow</groupId>
         <artifactId>tensorflow</artifactId>
-        <version>1.1.0-rc1</version>
+        <version>1.15.0</version>
       </dependency>
       <dependency>
         <groupId>com.github.jnr</groupId>
@@ -362,6 +363,11 @@
         <version>1.5.4</version>
       </dependency>
       <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.3.2</version>
+      </dependency>
+      <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
         <version>4.5.13</version>
@@ -369,13 +375,13 @@
       <dependency>
         <groupId>org.json</groupId>
         <artifactId>json</artifactId>
-        <version>20140107</version>
+        <version>20201115</version>
         <scope>compile</scope>
       </dependency>
       <dependency>
         <groupId>io.dropwizard.metrics</groupId>
         <artifactId>metrics-core</artifactId>
-        <version>3.2.2</version>
+        <version>4.1.15</version>
       </dependency>
       <dependency>
         <groupId>com.hazelcast</groupId>
@@ -390,7 +396,7 @@
       <dependency>
         <groupId>org.ow2.asm</groupId>
         <artifactId>asm</artifactId>
-        <version>4.0</version>
+        <version>9.0</version>
       </dependency>
       <dependency>
         <groupId>org.skife.kasparov</groupId>
@@ -410,12 +416,12 @@
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>2.4</version>
+        <version>2.8.0</version>
       </dependency>
       <dependency>
         <groupId>commons-cli</groupId>
         <artifactId>commons-cli</artifactId>
-        <version>1.2</version>
+        <version>1.4</version>
       </dependency>
       <dependency>
         <groupId>commons-lang</groupId>
@@ -425,7 +431,7 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.4</version>
+        <version>3.11</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -435,7 +441,7 @@
       <dependency>
         <groupId>commons-codec</groupId>
         <artifactId>commons-codec</artifactId>
-        <version>1.9</version>
+        <version>1.15</version>
       </dependency>
       <dependency>
         <groupId>commons-collections</groupId>
@@ -445,7 +451,7 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-collections4</artifactId>
-        <version>4.0</version>
+        <version>4.4</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}.fork</groupId>
@@ -455,12 +461,12 @@
       <dependency>
         <groupId>commons-beanutils</groupId>
         <artifactId>commons-beanutils</artifactId>
-        <version>1.9.1</version>
+        <version>1.9.4</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate.javax.persistence</groupId>
         <artifactId>hibernate-jpa-2.1-api</artifactId>
-        <version>1.0.0.Final</version>
+        <version>1.0.2</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
@@ -476,7 +482,7 @@
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient-cache</artifactId>
-        <version>4.5.1</version>
+        <version>4.5.13</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
@@ -514,13 +520,13 @@
       <dependency>
         <groupId>cglib</groupId>
         <artifactId>cglib</artifactId>
-        <version>3.1</version>
+        <version>3.3.0</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>com.espertech</groupId>
         <artifactId>esper</artifactId>
-        <version>5.5.0</version>
+        <version>7.1.0</version>
       </dependency>
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
@@ -530,7 +536,7 @@
       <dependency>
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
-        <version>2.9.9</version>
+        <version>2.10.8</version>
       </dependency>
       <dependency>
         <groupId>org.joda</groupId>
@@ -540,7 +546,7 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>20.0</version>
+        <version>30.0-jre</version>
       </dependency>
       <dependency>
         <groupId>org.ops4j</groupId>
@@ -591,7 +597,7 @@
       <dependency>
         <groupId>com.google.protobuf</groupId>
         <artifactId>protobuf-java</artifactId>
-        <version>2.6.1</version>
+        <version>3.14.0</version>
       </dependency>
       <dependency>
         <groupId>com.googlecode.protobuf-rpc-pro</groupId>
@@ -607,12 +613,12 @@
       <dependency>
         <groupId>com.googlecode.protobuf-rpc-pro</groupId>
         <artifactId>protobuf-rpc-pro-duplex</artifactId>
-        <version>3.2.2</version>
+        <version>3.3.4</version>
       </dependency>
       <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty-all</artifactId>
-        <version>4.0.15.Final</version>
+        <version>4.1.54.Final</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
@@ -663,25 +669,25 @@
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-pool</artifactId>
-        <version>5.9.0</version>
+        <version>${mvn.activemq.version}</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-broker</artifactId>
-        <version>5.9.0</version>
+        <version>${mvn.activemq.version}</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-stomp</artifactId>
-        <version>5.16.0</version>
+        <version>${mvn.activemq.version}</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-jaas</artifactId>
-        <version>5.9.0</version>
+        <version>${mvn.activemq.version}</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
@@ -719,7 +725,7 @@
       <dependency>
         <groupId>com.lmax</groupId>
         <artifactId>disruptor</artifactId>
-        <version>3.3.0</version>
+        <version>3.4.2</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
@@ -767,37 +773,25 @@
       <dependency>
         <groupId>org.apache.geronimo.javamail</groupId>
         <artifactId>geronimo-javamail_1.4_mail</artifactId>
-        <version>1.8.3</version>
+        <version>1.8.4</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.geronimo.javamail</groupId>
         <artifactId>geronimo-javamail_1.4_provider</artifactId>
-        <version>1.8.3</version>
+        <version>1.8.4</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.xbean</groupId>
         <artifactId>xbean-spring</artifactId>
-        <version>3.16</version>
+        <version>4.18</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>5.1.29</version>
-        <scope>runtime</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.derby</groupId>
-        <artifactId>derby</artifactId>
-        <version>10.14.2.0</version>
-        <scope>runtime</scope>
-      </dependency>
-      <dependency>
-        <groupId>hsqldb</groupId>
+        <groupId>org.hsqldb</groupId>
         <artifactId>hsqldb</artifactId>
-        <version>1.8.0.10</version>
+        <version>2.5.1</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
@@ -818,7 +812,7 @@
         <!-- use this version for postgres 9 or earlier -->
         <!--version>9.3-1101-jdbc41</version-->
         <!-- use this version from postgres 10 -->
-        <version>42.2.5.jre6</version>
+        <version>42.2.18</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
@@ -836,7 +830,7 @@
       <dependency>
         <groupId>org.apache.mina</groupId>
         <artifactId>mina-core</artifactId>
-        <version>2.0.16</version>
+        <version>2.1.4</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
@@ -923,13 +917,13 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.12</version>
+        <version>4.13.1</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>pl.pragmatists</groupId>
         <artifactId>JUnitParams</artifactId>
-        <version>1.0.4</version>
+        <version>1.1.1</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -971,7 +965,7 @@
         <plugin>
           <groupId>org.flywaydb</groupId>
           <artifactId>flyway-maven-plugin</artifactId>
-          <version>6.5.3</version>
+          <version>7.2.1</version>
         </plugin>
         <plugin>
           <groupId>com.mysema.maven</groupId>
@@ -995,7 +989,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
-          <version>1.12</version>
+          <version>3.2.0</version>
           <executions>
             <execution>
               <id>add-source</id>
@@ -1032,7 +1026,7 @@
         <!-- jar generation. -->
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.1.0</version>
+          <version>3.2.0</version>
           <executions>
             <execution>
               <id>build-test-jar</id>
@@ -1071,18 +1065,18 @@
         <!-- war generation. -->
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
-          <version>2.1-alpha-1</version>
+          <version>3.3.1</version>
         </plugin>
         <!-- bundle generation. -->
         <plugin>
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-bundle-plugin</artifactId>
-          <version>2.3.5</version>
+          <version>5.1.1</version>
         </plugin>
         <!-- mvn dependency:* -->
         <plugin>
           <artifactId>maven-dependency-plugin</artifactId>
-          <version>2.0</version>
+          <version>3.1.2</version>
         </plugin>
         <!-- mvn eclipse:* -->
         <plugin>
@@ -1097,12 +1091,12 @@
         <!-- mvn clean -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
-          <version>2.3</version>
+          <version>3.1.0</version>
         </plugin>
         <!-- mvn antrun:* -->
         <plugin>
           <artifactId>maven-antrun-plugin</artifactId>
-          <version>1.3</version>
+          <version>3.0.0</version>
           <dependencies>
             <dependency>
               <groupId>org.apache.ant</groupId>
@@ -1122,12 +1116,12 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>exec-maven-plugin</artifactId>
-          <version>1.6.0</version>
+          <version>3.0.0</version>
         </plugin>
         <!-- mvn test -->
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
+          <version>2.22.2</version>
           <configuration>
             <disableXmlReport>false</disableXmlReport>
             <forkCount>2.5C</forkCount>
@@ -1141,7 +1135,7 @@
         <!-- mvn compile -->
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
+          <version>3.8.1</version>
           <configuration>
             <source>1.${mvn.javase.version}</source>
             <target>1.${mvn.javase.version}</target>
@@ -1150,7 +1144,7 @@
         <!-- mvn javadoc:* -->
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>3.0.1</version>
+          <version>3.2.0</version>
           <configuration>
             <!-- add this to disable checking -->
             <failOnError>false</failOnError>
@@ -1159,7 +1153,7 @@
         <!-- mvn assembly:* -->
         <plugin>
           <artifactId>maven-assembly-plugin</artifactId>
-          <version>3.1.0</version>
+          <version>3.3.0</version>
           <configuration>
             <finalName>${project.artifactId}</finalName>
             <appendAssemblyId>false</appendAssemblyId>
@@ -1172,7 +1166,7 @@
       <!-- source jar generation -->
       <plugin>
         <artifactId>maven-source-plugin</artifactId>
-        <version>3.0.1</version>
+        <version>3.2.1</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -1228,7 +1222,7 @@
       <extension>
         <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-ssh</artifactId>
-        <version>2.5</version>
+        <version>3.4.0</version>
       </extension>
     </extensions>
     <resources>
@@ -1275,7 +1269,7 @@
           </plugin>
           <plugin>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.0.1</version>
+            <version>3.2.0</version>
             <executions>
               <execution>
                 <id>attach-javadocs</id>
@@ -1365,7 +1359,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.0.1</version>
+        <version>3.2.0</version>
         <configuration>
           <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
           <docletArtifact>
@@ -1380,12 +1374,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>3.3</version>
+        <version>3.9.1</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>2.7</version>
+        <version>3.1.1</version>
       </plugin>
     </plugins>
   </reporting>
